<resources>
    <string name="app_name">Quaggan Bazaar</string>
    <string name="loading">Loading</string>
    <string name="buy_price">Buy Price:  </string>
    <string name="sell_price">Sell Price:  </string>
    <string name="item_details">Item Details</string>
    <string name="search">Search</string>
    <string name="news">News</string>
    <string name="dungeons">Dungeons</string>
    <string name="achievements">Daily Achievements (Beta)</string>
    <string name="events">Events</string>
    <string name="legendarycraft">Legendary Crafting</string>
    <string name="notifications">Notifications</string>
    <string name="action_filter">Filter</string>
    <string name="action_notify">Notify</string>
    <string name="action_subtype">Subtype</string>
    <string name="action_orderby">Order By</string>
    <string name="action_addApiKey">Add Key</string>
    <string name="action_orderAsc">Ascending</string>
    <string name="action_orderDesc">Descending</string>
    <string name="action_clear">Clear All</string>
    <string name="items">Items</string>
    <string name="item_types">Item Types</string>
    <string name="item_all">All</string>
    <string name="item_armor">Armor</string>
    <string name="item_back">Back</string>
    <string name="item_bag">Bag</string>
    <string name="item_consumable">Consumable</string>
    <string name="item_container">Container</string>
    <string name="item_craftingmaterial">Crafting Material</string>
    <string name="item_gathering">Gathering</string>
    <string name="item_gizmo">Gizmo</string>
    <string name="item_mini">Mini Pet</string>
    <string name="item_tool">Tool</string>
    <string name="item_trait">Trait</string>
    <string name="item_trinket">Trinket</string>
    <string name="item_trophy">Trophy</string>
    <string name="item_upgrade_component">Upgrade Component</string>
    <string name="item_weapon">Weapon</string>
    <string-array name="type_array">
        <item>All</item>
        <item>Armor</item>
        <item>Back</item>
        <item>Bag</item>
        <item>Consumable</item>
        <item>Container</item>
        <item>Crafting Material</item>
        <item>Gathering</item>
        <item>Gizmo</item>
        <item>Mini Pet</item>
        <item>Tool</item>
        <item>Trait</item>
        <item>Trinket</item>
        <item>Trophy</item>
        <item>Upgrade Component</item>
        <item>Weapon</item>
    </string-array>
    <string-array name="subtype_armor_array">
        <item>All</item>
        <item>Boots</item>
        <item>Coat</item>
        <item>Gloves</item>
        <item>Helm</item>
        <item>Helm Aquatic</item>
        <item>Leggings</item>
        <item>Shoulders</item>
    </string-array>
    <string-array name="subtype_consumable_array">
        <item>All</item>
        <item>Appearance Change</item>
        <item>Booze</item>
        <item>Contract Npc</item>
        <item>Food</item>
        <item>Generic</item>
        <item>Halloween</item>
        <item>Immediate</item>
        <item>Transmutation</item>
        <item>Unlock</item>
        <item>Upgrade Removal</item>
        <item>Utility</item>
    </string-array>
    <string-array name="subtype_container_array">
        <item>All</item>
        <item>Default</item>
        <item>GiftBox</item>
        <item>OpenUI</item>
    </string-array>
    <string-array name="subtype_gatheringtool_array">
        <item>All</item>
        <item>Foraging</item>
        <item>Logging</item>
        <item>Mining</item>
    </string-array>
    <string-array name="subtype_gizmo_array">
        <item>All</item>
        <item>Default</item>
        <item>Container Key</item>
        <item>Rentable Contract Npc</item>
        <item>Unlimited Consumable</item>
    </string-array>
    <string-array name="subtype_trinket_array">
        <item>All</item>
        <item>Accessory</item>
        <item>Amulet</item>
        <item>Ring</item>
    </string-array>
    <string-array name="subtype_upgradecomponent_array">
        <item>All</item>
        <item>Default</item>
        <item>Gem</item>
        <item>Rune</item>
        <item>Sigil</item>
    </string-array>
    <string-array name="rarity_array">
        <item>All</item>
        <item>Junk</item>
        <item>Basic</item>
        <item>Fine</item>
        <item>Masterwork</item>
        <item>Rare</item>
        <item>Exotic</item>
        <item>Ascended</item>
        <item>Legendary</item>
    </string-array>
    <string-array name="all_array">
        <item>All</item>
    </string-array>
    <string-array name="subtype_weapon_array">
        <item>All</item>
        <item>Axe</item>
        <item>Dagger</item>
        <item>Mace</item>
        <item>Pistol</item>
        <item>Scepter</item>
        <item>Sword</item>
        <item>Focus</item>
        <item>Shield</item>
        <item>Torch</item>
        <item>Warhorn</item>
        <item>Greatsword</item>
        <item>Hammer</item>
        <item>LongBow</item>
        <item>Rifle</item>
        <item>ShortBow</item>
        <item>Staff</item>
        <item>Harpoon</item>
        <item>Speargun</item>
        <item>Trident</item>
        <item>Large Bundle</item>
        <item>Small Bundle</item>
        <item>Toy</item>
        <item>Two Handed Toy</item>
    </string-array>
    <string-array name="orderby_array">
        <item>Default - Ascending</item>
        <item>Default - Descending</item>
        <item>Name - Ascending</item>
        <item>Name - Descending</item>
        <item>Buy Price - Ascending</item>
        <item>Buy Price - Descending</item>
        <item>Sell Price - Ascending</item>
        <item>Sell Price - Descending</item>
    </string-array>
    <string-array name="orderby_array_value">
        <item>1-0</item>
        <item>1-1</item>
        <item>4-0</item>
        <item>4-1</item>
        <item>2-0</item>
        <item>2-1</item>
        <item>3-0</item>
        <item>3-1</item>
    </string-array>
    <string name="account">Account</string>
    <string name="account_api">API Key</string>
    <string name="account_api_Help">How to get an API Key</string>
    <string name="account_bank">Bank</string>
    <string name="account_pvp_stats">PVP Stats</string>
    <string name="account_pvp_games">PVP Games</string>
    <string name="account_material">Material</string>
    <string name="favorite_items">Favorites</string>
    <string name="account_my_character">My Characters</string>
    <string name="account_my_current_transactions">Current Transactions</string>
    <string name="account_history_transactions">Transactions History</string>
    <string name="preference">Preference</string>
    <string name="preference_setting">Setting</string>
    <string name="preference_credit">Credit</string>
    <string name="preference_email">Email That Dev</string>
    <string name="preference_Share">Share</string>
    <string name="preference_adsfree">Ads-Free</string>
    <string name="choose_one">Choose One:</string>
    <string name="recommend_text">\nLet me recommend you this app\n\n</string>
    <string name="google_play_link">https://play.google.com/store/apps/details?id=com.kai.gwtwohot\n\n</string>
    <string name="url_base">http://quagganbazaarapi.kai-mx.net</string>
    <string name="url_items">/items/Guild</string>
    <string name="url_items_search">/items/Guild/search</string>
    <string name="url_ids">/items/Guild/ids/</string>
    <string name="url_timer">/event/timer</string>
    <string name="url_email">/email</string>
    <string name="url_price">/prices/Guild/</string>
    <string name="url_recipe_item">/recipe/item/</string>
    <string name="url_news">/news</string>
    <string name="url_achievements">/achievements</string>
    <string name="url_quaggans">https://static.staticwars.com/quaggans/{quaggan}.jpg</string>
    <string name="url_v2_base">https://api.guildwars2.com/v2</string>
    <string name="url_v2_account">/account</string>
    <string name="url_v2_token">/tokeninfo</string>
    <string name="url_v2_character">/characters</string>
    <string name="url_v2_items">/items</string>
    <string name="url_v2_transactions">/commerce/transactions</string>
    <string name="url_v2_prices">/commerce/prices/</string>
    <string name="url_v2_buy">/buys</string>
    <string name="url_v2_sell">/sells</string>
    <string name="url_v2_current">/current</string>
    <string name="url_v2_history">/history</string>
    <string name="url_v2_bank">/bank</string>
    <string name="url_v2_materials">/materials</string>
    <string name="url_v2_recipe_search">/recipes/search</string>
    <string name="url_v2_recipe">/recipes/</string>
    <string name="url_v2_pvpstats">/pvp/stats</string>
    <string name="url_v2_pvpgames">/pvp/games</string>
    <string name="url_kai_quaggans">http://www.kai-mx.net/wp-content/uploads/GuildWarsV2/quaggans/{quaggan}.jpg</string>
    <string name="url_kai_boss">http://www.kai-mx.net/wp-content/uploads/QuagganBazaar/boss/%s.jpg</string>
    <string name="url_kai_price_update">/prices/Guild/Sync/Update/</string>
    <string name="url_kai_dungeons">/dungeons</string>
    <string name="url_kai_craft">/crafting</string>
    <string name="para_batches_size">batch_size</string>
    <string name="para_batches_num">batch_num</string>
    <string name="para_light">light</string>
    <string name="para_includePrice">includePrice</string>
    <string name="para_name">name</string>
    <string name="para_type">type</string>
    <string name="para_subtype">subtype</string>
    <string name="para_buyPriceMin">buyPriceMin</string>
    <string name="para_buyPriceMax">buyPriceMax</string>
    <string name="para_sellPriceMin">sellPriceMin</string>
    <string name="para_sellPriceMax">sellPriceMax</string>
    <string name="para_rarity">rarity</string>
    <string name="para_levelmin">levelmin</string>
    <string name="para_levelmax">levelmax</string>
    <string name="dialog_ok">OK</string>
    <string name="default_sync">15</string>
    <string name="pref_color_changer">Color Changer</string>
    <string name="pref_toolbar">Toolbar</string>
    <string name="pref_card">Card</string>
    <string name="pref_notification">Notification</string>
    <string name="pref_sync">Sync Rate</string>
    <string name="pref_sync_summary">The amount of time between which the app will sync up with the server to check for item that you have added for price notification</string>
    <string name="pref_send_email">Send an email</string>
    <string name="pref_email_address">Email Address</string>
    <string name="pref_quaggan">Quaggan Background Image</string>
    <string name="prefkey_quaggan">QuagganBackground</string>
    <string name="prefkey_toolbar">Toolbar</string>
    <string name="prefkey_card">Card</string>
    <string name="prefkey_sync">SyncRate</string>
    <string name="prefkey_send_email">SendAnEmail</string>
    <string name="prefkey_email_address">EmailAddress</string>
    <string name="email_tag">Thought of something? Have an issue? Just let me know</string>
    <string name="email_email_hint">Enter your email address</string>
    <string name="email_body_hint">Enter your message</string>
    <string name="email_subject_hint">Enter your subject</string>
    <string name="email_btn_email">Send Email</string>
    <string name="help_step_1">1. Go to <u>https://account.arena.net/</u></string>
    <string name="help_step_2">2. Login using your username and password</string>
    <string name="help_step_3">3. Click on \'Applications\'</string>
    <string name="help_step_5">4. Click on \'New Key\' and enter a name and select all permissions</string>
    <string name="help_step_6">5. Save your key</string>
    <string name="help_step_7">6. Copy and paste your key in the app\'s \'API Key\' section</string>
    <string name="action_rarity_colors">Rarity Colors</string>
    <string name="action_recipe">Recipe</string>
    <string name="donate_app">App Donation</string>
</resources>