<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/news"
        android:icon="@drawable/ic_action_news"
        android:title="@string/news" />

    <item
        android:id="@+id/events"
        android:icon="@drawable/ic_action_knight"
        android:title="@string/events" />

    <item
        android:id="@+id/legendary"
        android:icon="@drawable/ic_action_knight"
        android:title="@string/legendarycraft" />

    <item
        android:id="@+id/achievements"
        android:icon="@drawable/trophy"
        android:title="@string/achievements" />

    <item
        android:id="@+id/dungeons"
        android:icon="@drawable/dungeon"
        android:title="@string/dungeons" />

    <group
        android:checkableBehavior="single">

        <item android:title="@string/item_types">
            <menu>
                <item
                    android:id="@+id/item_all"
                    android:icon="@drawable/ic_action_document"
                    android:title="@string/item_all" />
                <item
                    android:id="@+id/item_armor"
                    android:icon="@drawable/ic_action_document"
                    android:title="@string/item_armor" />
                <item
                    android:id="@+id/item_back"
                    android:icon="@drawable/ic_action_document"
                    android:title="@string/item_back" />
                <item
                    android:id="@+id/item_bag"
                    android:icon="@drawable/ic_action_document"
                    android:title="@string/item_bag" />
                <item
                    android:id="@+id/item_consumable"
                    android:icon="@drawable/ic_action_document"
                    android:title="@string/item_consumable" />
                <item
                    android:id="@+id/item_container"
                    android:icon="@drawable/ic_action_document"
                    android:title="@string/item_container" />
                <item
                    android:id="@+id/item_craftingmaterial"
                    android:icon="@drawable/ic_action_document"
                    android:title="@string/item_craftingmaterial" />
                <item
                    android:id="@+id/item_gathering"
                    android:icon="@drawable/ic_action_document"
                    android:title="@string/item_gathering" />
                <item
                    android:id="@+id/item_gizmo"
                    android:icon="@drawable/ic_action_document"
                    android:title="@string/item_gizmo" />
                <item
                    android:id="@+id/item_mini"
                    android:icon="@drawable/ic_action_document"
                    android:title="@string/item_mini" />
                <item
                    android:id="@+id/item_tool"
                    android:icon="@drawable/ic_action_document"
                    android:title="@string/item_tool" />
                <item
                    android:id="@+id/item_trait"
                    android:icon="@drawable/ic_action_document"
                    android:title="@string/item_trait" />
                <item
                    android:id="@+id/item_trinket"
                    android:icon="@drawable/ic_action_document"
                    android:title="@string/item_trinket" />
                <item
                    android:id="@+id/item_trophy"
                    android:icon="@drawable/ic_action_document"
                    android:title="@string/item_trophy" />
                <item
                    android:id="@+id/item_upgrade_component"
                    android:icon="@drawable/ic_action_document"
                    android:title="@string/item_upgrade_component" />
                <item
                    android:id="@+id/item_weapon"
                    android:icon="@drawable/ic_action_document"
                    android:title="@string/item_weapon" />
                <item
                    android:id="@+id/favorite_item"
                    android:icon="@drawable/ic_action_heart"
                    android:title="@string/account_favorite_items" />

                <item
                    android:id="@+id/notification_item"
                    android:icon="@drawable/ic_action_info"
                    android:title="@string/notifications" />
            </menu>
        </item>

    </group>

    <group
        android:checkableBehavior="single">

        <item android:title="@string/account">
            <menu>
                <item
                    android:id="@+id/account_api"
                    android:icon="@drawable/ic_action_key"
                    android:title="@string/account_api" />

                <item
                    android:id="@+id/my_character"
                    android:icon="@drawable/ic_action_users"
                    android:title="@string/account_my_character" />
                <item
                    android:id="@+id/history_transaction"
                    android:icon="@drawable/ic_action_document"
                    android:title="@string/account_history_transactions" />
                <item
                    android:id="@+id/my_current_transactions"
                    android:icon="@drawable/ic_action_document"
                    android:title="@string/account_my_currenct_transactions" />

                <item
                    android:id="@+id/account_bank"
                    android:icon="@drawable/ic_action_document"
                    android:title="@string/account_bank" />

                <item
                    android:id="@+id/account_material"
                    android:icon="@drawable/ic_action_document"
                    android:title="@string/account_material" />

                <item
                    android:id="@+id/account_pvp_stats"
                    android:icon="@drawable/ic_action_document"
                    android:title="@string/account_pvp_stats" />

                <item
                    android:id="@+id/account_pvp_games"
                    android:icon="@drawable/ic_action_document"
                    android:title="@string/account_pvp_games" />

                <item
                    android:id="@+id/account_help"
                    android:icon="@android:drawable/ic_menu_help"
                    android:title="@string/account_api_Help" />
            </menu>
        </item>

    </group>

    <group
        android:checkableBehavior="single">

        <item android:title="@string/preference">
            <menu>
                <item
                    android:id="@+id/setting"
                    android:icon="@drawable/ic_action_gear"
                    android:title="@string/preference_setting" />
                <item
                    android:id="@+id/about"
                    android:icon="@drawable/ic_action_mustache"
                    android:title="@string/preference_credit" />
                <item
                    android:id="@+id/share"
                    android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
                    android:title="@string/preference_Share" />
                <item
                    android:id="@+id/donate_app"
                    android:icon="@drawable/price"
                    android:title="@string/donate_app" />
                <item
                    android:id="@+id/email"
                    android:icon="@drawable/ic_action_mail"
                    android:title="@string/preference_email" />
            </menu>
        </item>

    </group>

    <group
        android:checkableBehavior="single">

        <item android:title="@string/Kai">
            <menu>
                <item
                    android:id="@+id/action_save_child"
                    android:icon="@drawable/ic_action_users"
                    android:title="@string/save_a_child" />
            </menu>
        </item>

    </group>

</menu>