<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/action_notify"
        android:title="@string/action_notify"/>
    
    <group android:id="@+id/group_menu">
        <item
            android:id="@+id/action_clear"
            android:title="@string/action_clear" />
        <item
            android:id="@+id/action_rarity_color"
            android:title="@string/action_rarity_colors" />

        <item
            android:id="@+id/action_recipe"
            android:title="@string/action_recipe" />
    </group>

    <item
        android:id="@+id/action_addApiKey"
        android:icon="@drawable/gw_add"
        app:showAsAction="always"
        android:title="@string/action_addApiKey"/>

</menu>
