<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/txtAccountLink"
            android:padding="@dimen/padding_small"
            android:textColor="@color/belizeHole"
            android:text="@string/help_step_1"
            android:textSize="@dimen/abc_text_size_body_2_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:padding="@dimen/padding_small"
            android:textColor="@color/primary_text"
            android:text="@string/help_step_2"
            android:textSize="@dimen/abc_text_size_body_2_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:padding="@dimen/padding_small"
            android:textColor="@color/primary_text"
            android:text="@string/help_step_3"
            android:textSize="@dimen/abc_text_size_body_2_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:padding="@dimen/padding_small"
            android:textColor="@color/primary_text"
            android:text="@string/help_step_5"
            android:textSize="@dimen/abc_text_size_body_2_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:padding="@dimen/padding_small"
            android:textColor="@color/primary_text"
            android:text="@string/help_step_6"
            android:textSize="@dimen/abc_text_size_body_2_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:padding="@dimen/padding_small"
            android:textColor="@color/primary_text"
            android:text="@string/help_step_7"
            android:textSize="@dimen/abc_text_size_body_2_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:layout_width="@dimen/abc_action_button_min_width_material"
            android:layout_height="@dimen/abc_action_button_min_height_material"
            android:text="@string/dialog_ok"
            android:textColor="@color/accent"
            android:background="@android:color/transparent"
            android:id="@+id/btnOk"
            android:layout_margin="@dimen/margin_small"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="right" />
    </LinearLayout>

</RelativeLayout>